--- a/lessons/lesson03/todo-mvc-es6/index.html
+++ b/lessons/lesson03/todo-mvc-es6/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>TODO MVC JS App</title>
-<link rel="stylesheet" href="./css/style.css">
+    <title>TODO MVC ES6 App</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 <section class="todoapp">
@@ -15,19 +15,9 @@
         <ul class="todo-list">
 
         </ul>
-
-        <p>TOTAL:</p>
-        <div class="todo-list">
-        </div>
-        
     </section>
 </section>
 
-<script src="js/storage.js"></script>
-<script src="js/model.js"></script>
-<script src="js/view.js"></script>
-<script src="js/controller.js"></script>
-<script src="js/template.js"></script>
-<script src="js/app.js"></script>
+<script type="module" src="js/app.js"></script>
 </body>
 </html>
