--- a/lessons/lesson02/todo-mvc-js/index.html
+++ b/lessons/lesson02/todo-mvc-js/index.html
@@ -16,10 +16,10 @@
 
         </ul>
 
-        <p>TOTAL:</p>
-        <div class="todo-list">
+        <div class="todo-count">
+        TOTAL:
         </div>
-        
+
     </section>
 </section>
 
